# mips-emulator

./: .gitignore  CMakeLists.txt  MIPS.cpp  MIPS.h  main.cpp  tests.cpp
testdata/: imem_addu.txt  imem_dummy.txt  samples.txt
